update: Tabs Component add some unit test

--- a/src/components/tabs/styles/style.scss
+++ b/src/components/tabs/styles/style.scss
@@ -17,7 +17,7 @@
   border-bottom-color: white;
 }
 
-.rfox-tabs__content {
+.rfox-tabs__contents {
   padding: 14px;
   border: 1px solid #D4D4D5;
   border-top: none;
