update: icon component

--- a/src/components/icon/styles/iconfont/demo_fontclass.html
+++ b/src/components/icon/styles/iconfont/demo_fontclass.html
@@ -13,6 +13,54 @@
         <ul class="icon_lists clear">
             
                 <li>
+                <i class="icon iconfont icon-fillstar"></i>
+                    <div class="name"> 收藏2</div>
+                    <div class="fontclass">.icon-fillstar</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont icon-fillstar-hollow"></i>
+                    <div class="name"> 收藏</div>
+                    <div class="fontclass">.icon-fillstar-hollow</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont icon-favorite"></i>
+                    <div class="name">喜欢2</div>
+                    <div class="fontclass">.icon-favorite</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont icon-favorite-hollow"></i>
+                    <div class="name">喜欢</div>
+                    <div class="fontclass">.icon-favorite-hollow</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont icon-praise"></i>
+                    <div class="name">赞2</div>
+                    <div class="fontclass">.icon-praise</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont icon-praise-hollow"></i>
+                    <div class="name">赞</div>
+                    <div class="fontclass">.icon-praise-hollow</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont icon-appreciate"></i>
+                    <div class="name">感谢2</div>
+                    <div class="fontclass">.icon-appreciate</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont icon-appreciate-hollow"></i>
+                    <div class="name">感谢</div>
+                    <div class="fontclass">.icon-appreciate-hollow</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-check-circle"></i>
                     <div class="name">check-circle</div>
                     <div class="fontclass">.icon-check-circle</div>
