--- a/src/components/icon/styles/iconfont/demo_symbol.html
+++ b/src/components/icon/styles/iconfont/demo_symbol.html
@@ -29,6 +29,70 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-fillstar"></use>
+                    </svg>
+                    <div class="name"> 收藏2</div>
+                    <div class="fontclass">#icon-fillstar</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-fillstar-hollow"></use>
+                    </svg>
+                    <div class="name"> 收藏</div>
+                    <div class="fontclass">#icon-fillstar-hollow</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-favorite"></use>
+                    </svg>
+                    <div class="name">喜欢2</div>
+                    <div class="fontclass">#icon-favorite</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-favorite-hollow"></use>
+                    </svg>
+                    <div class="name">喜欢</div>
+                    <div class="fontclass">#icon-favorite-hollow</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-praise"></use>
+                    </svg>
+                    <div class="name">赞2</div>
+                    <div class="fontclass">#icon-praise</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-praise-hollow"></use>
+                    </svg>
+                    <div class="name">赞</div>
+                    <div class="fontclass">#icon-praise-hollow</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-appreciate"></use>
+                    </svg>
+                    <div class="name">感谢2</div>
+                    <div class="fontclass">#icon-appreciate</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-appreciate-hollow"></use>
+                    </svg>
+                    <div class="name">感谢</div>
+                    <div class="fontclass">#icon-appreciate-hollow</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-check-circle"></use>
                     </svg>
                     <div class="name">check-circle</div>
