--- a/src/components/icon/styles/iconfont/demo_unicode.html
+++ b/src/components/icon/styles/iconfont/demo_unicode.html
@@ -33,6 +33,54 @@
         <ul class="icon_lists clear">
             
                 <li>
+                <i class="icon iconfont">&#xe86d;</i>
+                    <div class="name"> 收藏2</div>
+                    <div class="code">&amp;#xe86d;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe86e;</i>
+                    <div class="name"> 收藏</div>
+                    <div class="code">&amp;#xe86e;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe86f;</i>
+                    <div class="name">喜欢2</div>
+                    <div class="code">&amp;#xe86f;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe870;</i>
+                    <div class="name">喜欢</div>
+                    <div class="code">&amp;#xe870;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe871;</i>
+                    <div class="name">赞2</div>
+                    <div class="code">&amp;#xe871;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe872;</i>
+                    <div class="name">赞</div>
+                    <div class="code">&amp;#xe872;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe88b;</i>
+                    <div class="name">感谢2</div>
+                    <div class="code">&amp;#xe88b;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe88c;</i>
+                    <div class="name">感谢</div>
+                    <div class="code">&amp;#xe88c;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe77d;</i>
                     <div class="name">check-circle</div>
                     <div class="code">&amp;#xe77d;</div>
