--- a/src/components/rate/styles/style.scss
+++ b/src/components/rate/styles/style.scss
@@ -7,7 +7,7 @@
     display: flex
 }
 
-.rfox-rate_item {
+.rfox-rate__item {
     padding: 0 2px;
     color: #e8e8e8;
     cursor: pointer;
@@ -21,13 +21,13 @@
         display: inline-block;
         transition: transform 0.15s linear;
     }
-    &.rfox-rate_item--hover {
+    &.rfox-rate__item--hover {
         color: #fadb14;
         i {
             transform: scale(1.1);
         }
     }
-    &.rfox-rate_item--disabled {
+    &.rfox-rate__item--disabled {
         cursor: default;
     }
 }
