--- a/src/components/progress/styles/index.scss
+++ b/src/components/progress/styles/index.scss
@@ -1,3 +1,28 @@
+
+.rfox-progress-line {
+    .rfox-progress-outer {
+        display: flex;
+        align-items: center;
+    }
+    .rfox-progress-inner {
+        flex: auto;
+        background-color: #f5f5f5;
+        border-radius: 100px;
+        margin-right: 5px;
+        height: 10px;
+    }
+    .rfox-progress-bg {
+        height: 100%;
+        background-color: #1890ff;
+        border-radius: 100px;
+        transition: all .4s cubic-bezier(.08, .82, .17, 1) 0s;
+    }
+    .rfox-progress-text {
+        font-size: 14px;
+        color: rgba(0, 0, 0, 0.45);
+    }
+}
+
 @keyframes ant-progress-active {
     0% {
         opacity: .1;
