--- a/src/components/button/styles/index.scss
+++ b/src/components/button/styles/index.scss
@@ -47,4 +47,51 @@
             border-color: #096dd9;
         }
     }
+    &.rfox-btn-dash {
+        color: rgba(0,0,0,0.65);
+        background-color: #fff;
+        border-color: #d9d9d9;
+        border-style: dashed;
+        &:hover,
+        &:focus {
+            color: #40a9ff;
+            background-color: #fff;
+            border-color: #40a9ff;
+        }
+        &.active,
+        &:active {
+            color: #096dd9;
+            background-color: #fff;
+            border-color: #096dd9;
+        }
+    }
+    &.rfox-btn-danger {
+        color: #f5222d;
+        background-color: #f5f5f5;
+        border-color: #d9d9d9;
+        &:hover,
+        &:focus {
+            color: #fff;
+            background-color: #ff4d4f;
+            border-color: #ff4d4f;
+        }
+        &.active,
+        &:active {
+            color: #fff;
+            background-color: #cf1322;
+            border-color: #cf1322;
+        }
+    }
+    &.rfox-btn-lg {
+        padding: 0 15px;
+        font-size: 16px;
+        border-radius: 4px;
+        height: 40px;
+    }
+    &.rfox-btn-sm {
+        padding: 0 7px;
+        font-size: 14px;
+        border-radius: 4px;
+        height: 24px;
+    }
 }
