--- a/src/components/button/styles/index.scss
+++ b/src/components/button/styles/index.scss
@@ -94,4 +94,31 @@
         border-radius: 4px;
         height: 24px;
     }
+    &.rfox-btn-primary,
+    &.rfox-btn-dash,
+    &.rfox-btn-danger {
+        &.rfox-btn-disabled {
+            color: rgba(0,0,0,0.25);
+            background-color: #f5f5f5;
+            border-color: #d9d9d9;
+            text-shadow: none;
+            box-shadow: none;
+            cursor: not-allowed;
+        }
+    }
+    &.rfox-btn-block {
+        width: 100%;
+    }
+    &.rfox-btn-circle {
+        border-radius: 50%;
+    }
+    &.rfox-btn-round {
+        border-radius: 32px;
+        &.rfox-btn-lg {
+            border-radius: 40px;
+        }
+        &.rfox-btn-sm {
+            border-radius: 24px;
+        }
+    }
 }
