--- a/src/components/button/styles/index.scss
+++ b/src/components/button/styles/index.scss
@@ -5,7 +5,7 @@
     text-align: center;
     cursor: pointer;
     background-image: none;
-    line-height: 1.5;
+    line-height: 32px;
     border: 1px solid #d9d9d9;
     white-space: nowrap;
     padding: 0 15px;
@@ -18,6 +18,7 @@
     color: rgba(0,0,0,0.65);
     background-color: #fff;
     outline: 0;
+    text-decoration: none;
     &:hover,
     &:focus {
         color: #40a9ff;
@@ -87,12 +88,14 @@
         font-size: 16px;
         border-radius: 4px;
         height: 40px;
+        line-height: 40px;
     }
     &.rfox-btn-sm {
         padding: 0 7px;
         font-size: 14px;
         border-radius: 4px;
         height: 24px;
+        line-height: 24px;
     }
     &.rfox-btn-primary,
     &.rfox-btn-dash,
