update: modal component

--- a/src/components/modal/styles/style.scss
+++ b/src/components/modal/styles/style.scss
@@ -65,6 +65,10 @@
     transition: color .3s;
 }
 
+.rfox-modal__close--hidden {
+    display: none;
+}
+
 .rfox-modal__close-x {
     display: block;
     width: 56px;
