update simple modal

--- a/src/components/modal/styles/style.scss
+++ b/src/components/modal/styles/style.scss
@@ -38,6 +38,7 @@
     background-color: #fff;
     border-radius: 4px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    box-sizing: border-box;
 }
 
 .rfox-modal--center {
@@ -53,7 +54,7 @@
     right: 0;
     z-index: 10;
     padding: 0;
-    color: rgba(0,0,0,0.45);
+    color: rgba(0, 0, 0, 0.45);
     font-weight: 700;
     line-height: 1;
     text-decoration: none;
@@ -91,7 +92,7 @@
 
 .rfox-modal__title {
     margin: 0;
-    color: rgba(0,0,0,0.85);
+    color: rgba(0, 0, 0, 0.85);
     font-weight: 500;
     font-size: 16px;
     line-height: 22px;
@@ -109,13 +110,15 @@
     text-align: right;
     border-top: 1px solid #e8e8e8;
     border-radius: 0 0 4px 4px;
-    button + button {
+
+    button+button {
         margin-left: 8px;
     }
 }
 
 .rfox-btn__mask {
     position: relative;
+
     &:after {
         content: '';
         position: absolute;
@@ -127,5 +130,68 @@
         background-color: #fff;
         z-index: 1;
         transition: opacity 0.2s;
+    }
+}
+
+.rfox-modal--simple {
+    .rfox-modal {
+        padding: 32px 32px 24px;
+        overflow: hidden;
+    }
+
+    .rfox-modal__simple-title {
+        display: block;
+        overflow: hidden;
+        color: rgba(0, 0, 0, 0.85);
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.4;
+        margin-left: 38px;
+    }
+
+    .rfox-modal__simple-desc {
+        margin-top: 8px;
+        margin-left: 38px;
+        color: rgba(0, 0, 0, 0.65);
+        font-size: 14px;
+    }
+
+    .rfox-modal__header {
+        display: none;
+    }
+
+    .rfox-modal__body {
+        padding: 0;
+    }
+
+    .rfox-modal__footer {
+        display: none;
+    }
+
+    button {
+        margin-top: 18px;
+        float: right;
+    }
+
+    .icon {
+        position: absolute;
+        top: 26px;
+        left: 32px;
+    }
+
+    .icon-info-circle {
+        color: #1890ff;
+    }
+
+    .icon-check-circle {
+        color: #52c41a;
+    }
+
+    .icon-close-circle {
+        color: #f5222d;
+    }
+
+    .icon-warning-circle {
+        color: #faad14
     }
 }
