--- a/src/components/modal/styles/style.scss
+++ b/src/components/modal/styles/style.scss
@@ -195,3 +195,25 @@
         color: #faad14
     }
 }
+
+.modal-enter {
+    opacity: 0.01;
+    transform: scale(0.9) translate(-10%, 10%);
+}
+
+.modal-enter-active {
+    opacity: 1;
+    transform: scale(1) translate(0, 0);
+    transition: all 300ms ease-out;
+}
+
+.modal-exit {
+    opacity: 1;
+    transform: scale(1) translate(0, 0);
+}
+
+.modal-exit-active {
+    opacity: 0.01;
+    transform: scale(0.9) translate(-10%, 10%);
+    transition: all 300ms ease-out;
+}
