--- a/src/components/modal/styles/style.scss
+++ b/src/components/modal/styles/style.scss
@@ -1,4 +1,5 @@
 .rfox-modal__mask {
+    display: none;
     position: fixed;
     top: 0;
     right: 0;
@@ -6,14 +7,15 @@
     left: 0;
     z-index: 1000;
     height: 100%;
+    opacity: 1;
     background-color: rgba(0, 0, 0, 0.65);
-}
-
-.rfox-modal__mask--hidden {
-    display: none;
+    &.rfox-modal__mask--hidden {
+        display: none;
+    }
 }
 
 .rfox-modal__wrapper {
+    display: none;
     position: fixed;
     top: 0;
     right: 0;
@@ -22,10 +24,6 @@
     z-index: 1000;
     overflow: auto;
     outline: 0;
-}
-
-.rfox-modal__wrapper--hidden {
-    display: none;
 }
 
 .rfox-modal {
@@ -197,6 +195,7 @@
 }
 
 .modal-enter {
+    display: block;
     opacity: 0.01;
     transform: scale(0.9) translate(-10%, 10%);
 }
@@ -204,10 +203,15 @@
 .modal-enter-active {
     opacity: 1;
     transform: scale(1) translate(0, 0);
-    transition: all 300ms ease-out;
+    transition: all 260ms ease-out;
+}
+
+.modal-enter-done {
+    display: block;
 }
 
 .modal-exit {
+    display: block;
     opacity: 1;
     transform: scale(1) translate(0, 0);
 }
@@ -215,5 +219,37 @@
 .modal-exit-active {
     opacity: 0.01;
     transform: scale(0.9) translate(-10%, 10%);
-    transition: all 300ms ease-out;
+    transition: all 260ms ease-out;
+}
+
+.modal-exit-done {
+    display: none
+}
+
+.modal-mask-enter {
+    display: block;
+    opacity: 0.01;
+}
+
+.modal-mask-enter-active {
+    opacity: 1;
+    transition: all 260ms ease-out;
+}
+
+.modal-mask-enter-done {
+    display: block;
+}
+
+.modal-mask-exit {
+    display: block;
+    opacity: 1;
+}
+
+.modal-mask-exit-active {
+    opacity: 0.01;
+    transition: all 260ms ease-out;
+}
+
+.modal-mask-exit-done {
+    display: none
 }
