add: modal demo

--- a/src/components/modal/styles/style.scss
+++ b/src/components/modal/styles/style.scss
@@ -109,6 +109,10 @@
     border-top: 1px solid #e8e8e8;
     border-radius: 0 0 4px 4px;
 
+    button {
+        vertical-align: middle;
+    }
+
     button+button {
         margin-left: 8px;
     }
